--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-<header>
+<head>
 	<title>Marie vs. Ulad</title>
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 	<link rel="stylesheet" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Pangolin" rel="stylesheet">
-</header>
+</head>
 <body >
 <div class="map-area">
 	<img class="map" src="maps/europe-borders.png">
