--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Marie vs. Ulad</title>
+	<meta charset="utf-8"/>
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 	<link rel="stylesheet" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Pangolin" rel="stylesheet">
@@ -12,9 +13,9 @@
 </div>
 <div class="data">
 	<br>
-	<div class="names">Marie vs. Ulad</div>
+	<div class="names"><u>Marie</u> vs. Ulad</div>
 	<br>
-	<div class="numbers">16 vs. 16</div>
+	<div class="numbers"><u>17</u> vs. 16</div>
 	<br>
 	<div class="countries">
 		Беларусь <img class="flag" src="flags-iso/BY.png" style="vertical-align: middle; width: 30px;"><br>
@@ -36,6 +37,7 @@
 		<div class="countries marie-countries">
 			Італія <img class="flag" src="flags-iso/IT.png"><br>
 			Швецыя <img class="flag" src="flags-iso/SE.png"><br>
+			Данія <img class="flag" src="flags-iso/DK.png"><br>
 		</div>
 		<div class="countries ulad-countries">
 			Велікабрытанія <img class="flag" src="flags-iso/GB.png"><br>
