--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </div>
 <div class="data">
 	<br>
-	<div class="names"><u>Marie</u> vs. Ulad</div>
+	<div class="names">Marie vs. Ulad</div>
 	<br>
-	<div class="numbers"><u>17</u> vs. 16</div>
+	<div class="numbers">17 vs. 17</div>
 	<br>
 	<div class="countries">
 		Беларусь <img class="flag" src="flags-iso/BY.png" style="vertical-align: middle; width: 30px;"><br>
@@ -33,10 +33,10 @@
 		Швейцарыя <img class="flag" src="flags-iso/CH.png"><br>
 		Францыя <img class="flag" src="flags-iso/FR.png"><br>
 		Ліхтэнштэйн <img class="flag" src="flags-iso/LI.png"><br>
+		Швецыя <img class="flag" src="flags-iso/SE.png"><br>
 		<br>
 		<div class="countries marie-countries">
 			Італія <img class="flag" src="flags-iso/IT.png"><br>
-			Швецыя <img class="flag" src="flags-iso/SE.png"><br>
 			Данія <img class="flag" src="flags-iso/DK.png"><br>
 		</div>
 		<div class="countries ulad-countries">
