--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </div>
 <div class="data">
 	<br>
-	<div class="names">Marie vs. Ulad</div>
+	<div class="names"><u>Marie</u> vs. Ulad</div>
 	<br>
-	<div class="numbers">17 vs. 17</div>
+	<div class="numbers"><u>18</u> vs. 17</div>
 	<br>
 	<div class="countries">
 		Беларусь <img class="flag" src="flags-iso/BY.png" style="vertical-align: middle; width: 30px;"><br>
@@ -38,10 +38,12 @@
 		<div class="countries marie-countries">
 			Італія <img class="flag" src="flags-iso/IT.png"><br>
 			Данія <img class="flag" src="flags-iso/DK.png"><br>
+			Нарвегія <img class="flag" src="flags-iso/NO.png"><br>
 		</div>
 		<div class="countries ulad-countries">
 			Велікабрытанія <img class="flag" src="flags-iso/GB.png"><br>
 			Партугалія <img class="flag" src="flags-iso/PT.png"><br>
+			<br>
 		</div>
 	</div>
 </div>
