USA (CA) update

--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
 <body >
 <div class="map-area">
 	<img class="map" src="maps/europe-borders.png">
+	<img class="map" src="maps/usa-borders.png">
 </div>
 <div class="data">
 	<br>
-	<div class="names"><u>Marie</u> vs. Ulad</div>
+	<div class="names">Marie vs. Ulad</div>
 	<br>
-	<div class="numbers"><u>18</u> vs. 17</div>
+	<div class="numbers">18 vs. 18</div>
 	<br>
 	<div class="countries">
+		<br>
 		Беларусь <img class="flag" src="flags-iso/BY.png" style="vertical-align: middle; width: 30px;"><br>
 		<br>
 		Украіна <img class="flag" src="flags-iso/UA.png"><br>
@@ -39,10 +41,12 @@
 			Італія <img class="flag" src="flags-iso/IT.png"><br>
 			Данія <img class="flag" src="flags-iso/DK.png"><br>
 			Нарвегія <img class="flag" src="flags-iso/NO.png"><br>
+			<br>
 		</div>
 		<div class="countries ulad-countries">
 			Велікабрытанія <img class="flag" src="flags-iso/GB.png"><br>
 			Партугалія <img class="flag" src="flags-iso/PT.png"><br>
+			ЗША <img class="flag" src="flags-iso/US.png"> (CA)<br>
 			<br>
 		</div>
 	</div>
