USA (WA) update

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<div class="countries ulad-countries">
 			Велікабрытанія <img class="flag" src="flags-iso/GB.png"><br>
 			Партугалія <img class="flag" src="flags-iso/PT.png"><br>
-			ЗША <img class="flag" src="flags-iso/US.png"> (CA)<br>
+			ЗША <img class="flag" src="flags-iso/US.png"> (CA,WA)<br>
 			<br>
 		</div>
 	</div>
