--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 <div class="map-area">
 	<img class="map" src="maps/europe-borders.png">
 	<img class="map" src="maps/usa-borders.png">
+	<img class="map" src="maps/world-borders.png">
 </div>
 <div class="data">
 	<br>
 	<div class="names">Marie vs. Ulad</div>
 	<br>
-	<div class="numbers">18 vs. 18</div>
+	<div class="numbers">18 vs. 19</div>
 	<br>
 	<div class="countries">
 		<br>
@@ -42,11 +43,13 @@
 			Данія <img class="flag" src="flags-iso/DK.png"><br>
 			Нарвегія <img class="flag" src="flags-iso/NO.png"><br>
 			<br>
+			<br>
 		</div>
 		<div class="countries ulad-countries">
 			Велікабрытанія <img class="flag" src="flags-iso/GB.png"><br>
 			Партугалія <img class="flag" src="flags-iso/PT.png"><br>
 			ЗША <img class="flag" src="flags-iso/US.png"> (CA,WA)<br>
+			Мексіка <img class="flag" src="flags-iso/MX.png"><br>
 			<br>
 		</div>
 	</div>
