--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<br>
 	<div class="names">Marie vs. Ulad</div>
 	<br>
-	<div class="numbers">18 vs. 19</div>
+	<div class="numbers">18 vs. 20</div>
 	<br>
 	<div class="countries">
 		<br>
@@ -44,12 +44,14 @@
 			Нарвегія <img class="flag" src="flags-iso/NO.png"><br>
 			<br>
 			<br>
+			<br>
 		</div>
 		<div class="countries ulad-countries">
 			Велікабрытанія <img class="flag" src="flags-iso/GB.png"><br>
 			Партугалія <img class="flag" src="flags-iso/PT.png"><br>
 			ЗША <img class="flag" src="flags-iso/US.png"> (CA,WA)<br>
 			Мексіка <img class="flag" src="flags-iso/MX.png"><br>
+			Куба <img class="flag" src="flags-iso/CU.png"><br>
 			<br>
 		</div>
 	</div>
