auto-generating maps from lists of countries

--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 	<link rel="stylesheet" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Pangolin" rel="stylesheet">
+
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+	<script src="https://code.highcharts.com/maps/highmaps.js"></script>
+	<script src="https://code.highcharts.com/maps/modules/data.js"></script>
+	<script src="https://code.highcharts.com/mapdata/custom/world.js"></script>
 </head>
 <body >
 <div class="map-area">
-	<img class="map" src="maps/europe-borders.png">
-	<img class="map" src="maps/usa-borders.png">
-	<img class="map" src="maps/world-borders.png">
+	<br>
+	<br>
+	<div id="container" style="height: 500px; min-width: 310px; max-width: 1000px; margin: 0 auto"></div>
+	<script src="map.js"></script>
 </div>
 <div class="data">
 	<br>
