russian provinces added

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
 	<div class="subheader">Злучаныя Штаты</div>
 	<div id="usa_div" class="map"></div>
 
+	<div class="subheader">Расея</div>
+	<div id="russia_div" class="map"></div>
+
 	<script src="map.js"></script>
 </div>
 </body>
