--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<br>
 	<div class="names">Marie vs. Ulad</div>
 	<br>
-	<div class="numbers">19 vs. 20</div>
+	<div class="numbers">20 vs. 21</div>
 	<br>
 	<div class="countries">
 		<br>
@@ -36,6 +36,7 @@
 		Францыя <img class="flag" src="flags-iso/FR.png"><br>
 		Ліхтэнштэйн <img class="flag" src="flags-iso/LI.png"><br>
 		Швецыя <img class="flag" src="flags-iso/SE.png"><br>
+		Іран <img class="flag" src="flags-iso/IR.png"><br>
 		<br>
 		<div class="countries marie-countries">
 			Італія <img class="flag" src="flags-iso/IT.png"><br>
