--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<br>
 	<div class="names">Marie vs. Ulad</div>
 	<br>
-	<div class="numbers">20 vs. 21</div>
+	<div class="numbers">21 vs. 23</div>
 	<br>
 	<div class="countries">
 		<br>
@@ -37,12 +37,14 @@
 		Ліхтэнштэйн <img class="flag" src="flags-iso/LI.png"><br>
 		Швецыя <img class="flag" src="flags-iso/SE.png"><br>
 		Іран <img class="flag" src="flags-iso/IR.png"><br>
+		Данія <img class="flag" src="flags-iso/DK.png"><br>
 		<br>
 		<div class="countries marie-countries">
 			Італія <img class="flag" src="flags-iso/IT.png"><br>
-			Данія <img class="flag" src="flags-iso/DK.png"><br>
 			Нарвегія <img class="flag" src="flags-iso/NO.png"><br>
 			Турэччына <img class="flag" src="flags-iso/TR.png"><br>
+			Фінляндыя <img class="flag" src="flags-iso/FI.png"><br>
+			<br>
 			<br>
 			<br>
 		</div>
@@ -52,6 +54,7 @@
 			ЗША <img class="flag" src="flags-iso/US.png"> (CA,WA)<br>
 			Мексіка <img class="flag" src="flags-iso/MX.png"><br>
 			Куба <img class="flag" src="flags-iso/CU.png"><br>
+			Грузія <img class="flag" src="flags-iso/GE.png"><br>
 			<br>
 		</div>
 	</div>
