[Ulad] US Nevada

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<div class="countries ulad-countries">
 			Велікабрытанія <img class="flag" src="flags-iso/GB.png"><br>
 			Партугалія <img class="flag" src="flags-iso/PT.png"><br>
-			ЗША <img class="flag" src="flags-iso/US.png"> (CA,WA)<br>
+			ЗША <img class="flag" src="flags-iso/US.png"> (CA,WA,NV)<br>
 			Мексіка <img class="flag" src="flags-iso/MX.png"><br>
 			Куба <img class="flag" src="flags-iso/CU.png"><br>
 			Грузія <img class="flag" src="flags-iso/GE.png"><br>
