--- a/index.html
+++ b/index.html
@@ -46,12 +46,13 @@
 			Фінляндыя <img class="flag" src="flags-iso/FI.png"><br>
 			<br>
 			<br>
+      <br>
 			<br>
 		</div>
 		<div class="countries ulad-countries">
 			Велікабрытанія <img class="flag" src="flags-iso/GB.png"><br>
 			Партугалія <img class="flag" src="flags-iso/PT.png"><br>
-			ЗША <img class="flag" src="flags-iso/US.png"> (CA,WA,NV)<br>
+			ЗША <img class="flag" src="flags-iso/US.png"><small>(CA,WA,NV,MA,NY)</small><br>
 			Мексіка <img class="flag" src="flags-iso/MX.png"><br>
 			Куба <img class="flag" src="flags-iso/CU.png"><br>
 			Грузія <img class="flag" src="flags-iso/GE.png"><br>
