[Ulad] Canada - British Columbia

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<br>
 	<div class="names">Marie vs. Ulad</div>
 	<br>
-	<div class="numbers">21 vs. 23</div>
+	<div class="numbers">21 vs. 24</div>
 	<br>
 	<div class="countries">
 		<br>
@@ -48,14 +48,16 @@
 			<br>
       <br>
 			<br>
+      <br>
 		</div>
 		<div class="countries ulad-countries">
 			Велікабрытанія <img class="flag" src="flags-iso/GB.png"><br>
 			Партугалія <img class="flag" src="flags-iso/PT.png"><br>
-			ЗША <img class="flag" src="flags-iso/US.png"><small>(CA,WA,NV,MA,NY,OR)</small><br>
+			ЗША <img class="flag" src="flags-iso/US.png"> : <small>CA,WA,NV,MA,NY,OR</small><br>
 			Мексіка <img class="flag" src="flags-iso/MX.png"><br>
 			Куба <img class="flag" src="flags-iso/CU.png"><br>
 			Грузія <img class="flag" src="flags-iso/GE.png"><br>
+      Канада <img class="flag" src="flags-iso/CA.png"> : <small>BC</small><br>
 			<br>
 		</div>
 	</div>
@@ -73,6 +75,9 @@
 
 	<div class="subheader">Расея</div>
 	<div id="russia_div" class="map"></div>
+
+  <div class="subheader">Канада</div>
+	<div id="canada_div" class="map"></div>
 
 	<script src="map.js"></script>
 </div>
