--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<div class="countries ulad-countries">
 			Велікабрытанія <img class="flag" src="flags-iso/GB.png"><br>
 			Партугалія <img class="flag" src="flags-iso/PT.png"><br>
-			ЗША <img class="flag" src="flags-iso/US.png"> : <small>CA,WA,NV,MA,NY,OR</small><br>
+			ЗША <img class="flag" src="flags-iso/US.png"> : <small>CA,WA,NV,MA,NY,OR,HI</small><br>
 			Мексіка <img class="flag" src="flags-iso/MX.png"><br>
 			Куба <img class="flag" src="flags-iso/CU.png"><br>
 			Грузія <img class="flag" src="flags-iso/GE.png"><br>
