[Ulad] Canada - Ontario, Quebec

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			Мексіка <img class="flag" src="flags-iso/MX.png"><br>
 			Куба <img class="flag" src="flags-iso/CU.png"><br>
 			Грузія <img class="flag" src="flags-iso/GE.png"><br>
-      Канада <img class="flag" src="flags-iso/CA.png"> : <small>BC</small><br>
+      Канада <img class="flag" src="flags-iso/CA.png"> : <small>BC,ON,QC</small><br>
 			<br>
 		</div>
 	</div>
