Add full country name to ISO code conversion.
This feature allows to store country data in a human-readable way and then convert it to
easier to use country codes.

Flags work now, expectw for provinces, which need to be handled separatly.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
 
 	<script type="text/javascript" src="utils.js"></script>
+	<script type="text/javascript" src="countrymap.js"></script>
 	<script type="text/javascript" src="data.js"></script>
 
 	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
