Added language switch stub.
This is a hover-on button to switch languages. Will probably contain flags
instead of text. Has no functionally right now.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
 	</div>
 </div>
 <div class="map-area">
+	<div class="map-header">
+		<div class="language-switch">
+			<div class="language-text">EN</div>
+			<div class="language-options">
+				<a href="index.html">RU</a>
+				<a href="index.html">BY</a>
+			</div>
+		</div>
+	</div>
 	<br>
 	<div class="subheader">Сусвет</div>
 	<div id="world_div" class="map"></div>
