[Ulad] Turkey, Northern Cyprus

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<br>
 	<div class="names">Marie vs. Ulad</div>
 	<br>
-	<div class="numbers">21 vs. 25</div>
+	<div class="numbers">21 vs. 27</div>
 	<br>
 	<div class="countries">
 		<br>
@@ -39,14 +39,16 @@
 		Іран <img class="flag" src="flags-iso/IR.png"><br>
 		Данія <img class="flag" src="flags-iso/DK.png"><br>
     Фінляндыя <img class="flag" src="flags-iso/FI.png"><br>
+    Турэччына <img class="flag" src="flags-iso/TR.png"><br>
 		<br>
 		<div class="countries marie-countries">
 			Італія <img class="flag" src="flags-iso/IT.png"><br>
 			Нарвегія <img class="flag" src="flags-iso/NO.png"><br>
-			Турэччына <img class="flag" src="flags-iso/TR.png"><br>
+			<br>
 		  <br>
 			<br>
 			<br>
+      <br>
       <br>
 			<br>
       <br>
@@ -59,6 +61,7 @@
 			Куба <img class="flag" src="flags-iso/CU.png"><br>
 			Грузія <img class="flag" src="flags-iso/GE.png"><br>
       Канада <img class="flag" src="flags-iso/CA.png"> : <small>BC,ON,QC</small><br>
+      Паўночны Кіпр <img class="flag" src="flags-iso/_northern-cyprus.png"><br>
 			<br>
 		</div>
 	</div>
