--- a/index.html
+++ b/index.html
@@ -1,88 +1,90 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Marie vs. Ulad</title>
-	<meta charset="utf-8"/>
-	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-	<link rel="stylesheet" href="styles.css">
-	<link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
+  <title>Marie vs. Ulad</title>
+  <meta charset="utf-8"/>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
 
-	<script type="text/javascript" src="data.js"></script>
+  <script type="text/javascript" src="data.js"></script>
 
-	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 </head>
 <body >
 <div class="data">
-	<br>
-	<div class="names">Marie vs. Ulad</div>
-	<br>
-	<div class="numbers">22 vs. 27</div>
-	<br>
-	<div class="countries">
-		<br>
-		Беларусь <img class="flag" src="flags-iso/BY.png" style="vertical-align: middle; width: 30px;"><br>
-		<br>
-		Украіна <img class="flag" src="flags-iso/UA.png"><br>
-		Расея <img class="flag" src="flags-iso/RU.png"><br>
-		Польшча <img class="flag" src="flags-iso/PL.png"><br>
-		Нямеччына <img class="flag" src="flags-iso/DE.png"><br>
-		Баўгарыя <img class="flag" src="flags-iso/BG.png"><br>
-		Чэхія <img class="flag" src="flags-iso/CZ.png"><br>
-		Літва <img class="flag" src="flags-iso/LT.png"><br>
-		Латвія <img class="flag" src="flags-iso/LV.png"><br>
-		Эстонія <img class="flag" src="flags-iso/EE.png"><br>
-		Малдова <img class="flag" src="flags-iso/MD.png"><br>
-		Швейцарыя <img class="flag" src="flags-iso/CH.png"><br>
-		Францыя <img class="flag" src="flags-iso/FR.png"><br>
-		Ліхтэнштэйн <img class="flag" src="flags-iso/LI.png"><br>
-		Швецыя <img class="flag" src="flags-iso/SE.png"><br>
-		Іран <img class="flag" src="flags-iso/IR.png"><br>
-		Данія <img class="flag" src="flags-iso/DK.png"><br>
+  <br>
+  <div class="names">Marie vs. Ulad</div>
+  <br>
+  <div class="numbers">22 vs. 28</div>
+  <br>
+  <div class="countries">
+    <br>
+    Беларусь <img class="flag" src="flags-iso/BY.png" style="vertical-align: middle; width: 30px;"><br>
+    <br>
+    Украіна <img class="flag" src="flags-iso/UA.png"><br>
+    Расея <img class="flag" src="flags-iso/RU.png"><br>
+    Польшча <img class="flag" src="flags-iso/PL.png"><br>
+    Нямеччына <img class="flag" src="flags-iso/DE.png"><br>
+    Баўгарыя <img class="flag" src="flags-iso/BG.png"><br>
+    Чэхія <img class="flag" src="flags-iso/CZ.png"><br>
+    Літва <img class="flag" src="flags-iso/LT.png"><br>
+    Латвія <img class="flag" src="flags-iso/LV.png"><br>
+    Эстонія <img class="flag" src="flags-iso/EE.png"><br>
+    Малдова <img class="flag" src="flags-iso/MD.png"><br>
+    Швейцарыя <img class="flag" src="flags-iso/CH.png"><br>
+    Францыя <img class="flag" src="flags-iso/FR.png"><br>
+    Ліхтэнштэйн <img class="flag" src="flags-iso/LI.png"><br>
+    Швецыя <img class="flag" src="flags-iso/SE.png"><br>
+    Іран <img class="flag" src="flags-iso/IR.png"><br>
+    Данія <img class="flag" src="flags-iso/DK.png"><br>
     Фінляндыя <img class="flag" src="flags-iso/FI.png"><br>
     Турэччына <img class="flag" src="flags-iso/TR.png"><br>
     Грузія <img class="flag" src="flags-iso/GE.png"><br>
-		<br>
-		<div class="countries marie-countries">
-			Італія <img class="flag" src="flags-iso/IT.png"><br>
-			Нарвегія <img class="flag" src="flags-iso/NO.png"><br>
-			<br>
-		  <br>
-			<br>
-			<br>
+    <br>
+    <div class="countries marie-countries">
+      Італія <img class="flag" src="flags-iso/IT.png"><br>
+      Нарвегія <img class="flag" src="flags-iso/NO.png"><br>
       <br>
-			<br>
       <br>
-		</div>
-		<div class="countries ulad-countries">
-			Велікабрытанія <img class="flag" src="flags-iso/GB.png"><br>
-			Партугалія <img class="flag" src="flags-iso/PT.png"><br>
-			ЗША <img class="flag" src="flags-iso/US.png"> : <small>CA,WA,NV,MA,NY,OR,HI</small><br>
-			Мексіка <img class="flag" src="flags-iso/MX.png"><br>
-			Куба <img class="flag" src="flags-iso/CU.png"><br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+    </div>
+    <div class="countries ulad-countries">
+      Велікабрытанія <img class="flag" src="flags-iso/GB.png"><br>
+      Партугалія <img class="flag" src="flags-iso/PT.png"><br>
+      ЗША <img class="flag" src="flags-iso/US.png"> : <small>CA,WA,NV,MA,NY,OR,HI</small><br>
+      Мексіка <img class="flag" src="flags-iso/MX.png"><br>
+      Куба <img class="flag" src="flags-iso/CU.png"><br>
       Канада <img class="flag" src="flags-iso/CA.png"> : <small>BC,ON,QC</small><br>
       Паўночны Кіпр <img class="flag" src="flags-iso/_northern-cyprus.png"><br>
-			<br>
-		</div>
-	</div>
+      Славаччына <img class="flag" src="flags-iso/SK.png"><br>
+      <br>
+    </div>
+  </div>
 </div>
 <div class="map-area">
-	<br>
-	<div class="subheader">Сусвет</div>
-	<div id="world_div" class="map"></div>
+  <br>
+  <div class="subheader">Сусвет</div>
+  <div id="world_div" class="map"></div>
 
-	<div class="subheader">Эўропа</div>
-	<div id="europe_div" class="map"></div>
+  <div class="subheader">Эўропа</div>
+  <div id="europe_div" class="map"></div>
 
-	<div class="subheader">Злучаныя Штаты</div>
-	<div id="usa_div" class="map"></div>
+  <div class="subheader">Злучаныя Штаты</div>
+  <div id="usa_div" class="map"></div>
 
-	<div class="subheader">Расея</div>
-	<div id="russia_div" class="map"></div>
+  <div class="subheader">Расея</div>
+  <div id="russia_div" class="map"></div>
 
   <div class="subheader">Канада</div>
-	<div id="canada_div" class="map"></div>
+  <div id="canada_div" class="map"></div>
 
-	<script src="map.js"></script>
+  <script src="map.js"></script>
 </div>
 </body>
 
