[Ulad] Croatia, Bosnia and Herzegovina, Belgium

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <br>
   <div class="names">Marie vs. Ulad</div>
   <br>
-  <div class="numbers">22 vs. 28</div>
+  <div class="numbers">22 vs. 31</div>
   <br>
   <div class="countries">
     <br>
@@ -53,6 +53,9 @@
       <br>
       <br>
       <br>
+      <br>
+      <br>
+      <br>
     </div>
     <div class="countries ulad-countries">
       Велікабрытанія <img class="flag" src="flags-iso/GB.png"><br>
@@ -63,6 +66,9 @@
       Канада <img class="flag" src="flags-iso/CA.png"> : <small>BC,ON,QC</small><br>
       Паўночны Кіпр <img class="flag" src="flags-iso/_northern-cyprus.png"><br>
       Славаччына <img class="flag" src="flags-iso/SK.png"><br>
+      Харватыя <img class="flag" src="flags-iso/HR.png"><br>
+      Боснія і Герцагавіна <img class="flag" src="flags-iso/BA.png"><br>
+      Бельгія <img class="flag" src="flags-iso/BE.png"><br>
       <br>
     </div>
   </div>
