--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <br>
   <div class="names">Marie vs. Ulad</div>
   <br>
-  <div class="numbers">22 vs. 32</div>
+  <div class="numbers">22 vs. 33</div>
   <br>
   <div class="countries">
     <br>
@@ -57,6 +57,7 @@
       <br>
       <br>
       <br>
+      <br>
     </div>
     <div class="countries ulad-countries">
       Велікабрытанія <img class="flag" src="flags-iso/GB.png"><br>
@@ -70,6 +71,7 @@
       Харватыя <img class="flag" src="flags-iso/HR.png"><br>
       Боснія і Герцагавіна <img class="flag" src="flags-iso/BA.png"><br>
       Бельгія <img class="flag" src="flags-iso/BE.png"><br>
+      Грэцыя <img class="flag" src="flags-iso/GR.png"><br>
       <br>
     </div>
   </div>
