--- a/index.html
+++ b/index.html
@@ -42,9 +42,16 @@
     Турэччына <img class="flag" src="flags-iso/TR.png"><br>
     Грузія <img class="flag" src="flags-iso/GE.png"><br>
     Італія <img class="flag" src="flags-iso/IT.png"><br>
+    Партугалія <img class="flag" src="flags-iso/PT.png"><br>
+    Славаччына <img class="flag" src="flags-iso/SK.png"><br>
+    Харватыя <img class="flag" src="flags-iso/HR.png"><br>
+    Боснія і Герцагавіна <img class="flag" src="flags-iso/BA.png"><br>
+    Бельгія <img class="flag" src="flags-iso/BE.png"><br>
     <br>
     <div class="countries marie-countries">
       Нарвегія <img class="flag" src="flags-iso/NO.png"><br>
+      Гішпанія <img class="flag" src="flags-iso/ES.png"><br>
+      Вугоршчына <img class="flag" src="flags-iso/HU.png"><br>
       <br>
       <br>
       <br>
@@ -61,16 +68,11 @@
     </div>
     <div class="countries ulad-countries">
       Велікабрытанія <img class="flag" src="flags-iso/GB.png"><br>
-      Партугалія <img class="flag" src="flags-iso/PT.png"><br>
       ЗША <img class="flag" src="flags-iso/US.png"> : <small>CA,WA,NV,MA,NY,OR,HI</small><br>
       Мексіка <img class="flag" src="flags-iso/MX.png"><br>
       Куба <img class="flag" src="flags-iso/CU.png"><br>
       Канада <img class="flag" src="flags-iso/CA.png"> : <small>BC,ON,QC</small><br>
       Паўночны Кіпр <img class="flag" src="flags-iso/_northern-cyprus.png"><br>
-      Славаччына <img class="flag" src="flags-iso/SK.png"><br>
-      Харватыя <img class="flag" src="flags-iso/HR.png"><br>
-      Боснія і Герцагавіна <img class="flag" src="flags-iso/BA.png"><br>
-      Бельгія <img class="flag" src="flags-iso/BE.png"><br>
       Грэцыя <img class="flag" src="flags-iso/GR.png"><br>
       <br>
     </div>
