--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <br>
   <div class="names">Marie vs. Ulad</div>
   <br>
-  <div class="numbers">30 vs. 33</div>
+  <div class="numbers">31 vs. 33</div>
   <br>
   <div class="countries">
     <br>
@@ -48,11 +48,13 @@
     Боснія і Герцагавіна <img class="flag" src="flags-iso/BA.png"><br>
     Бельгія <img class="flag" src="flags-iso/BE.png"><br>
     Грэцыя <img class="flag" src="flags-iso/GR.png"><br>
+    ЗША <img class="flag" src="flags-iso/US.png"> : <small>MA,NY</small><br>
     <br>
     <div class="countries marie-countries">
       Нарвегія <img class="flag" src="flags-iso/NO.png"><br>
       Гішпанія <img class="flag" src="flags-iso/ES.png"><br>
       Вугоршчына <img class="flag" src="flags-iso/HU.png"><br>
+      ЗША <img class="flag" src="flags-iso/US.png"> : <small>DC,PA</small><br>
       <br>
       <br>
       <br>
@@ -61,7 +63,7 @@
     </div>
     <div class="countries ulad-countries">
       Велікабрытанія <img class="flag" src="flags-iso/GB.png"><br>
-      ЗША <img class="flag" src="flags-iso/US.png"> : <small>CA,WA,NV,MA,NY,OR,HI</small><br>
+      ЗША <img class="flag" src="flags-iso/US.png"> : <small>CA,WA,NV,OR,HI</small><br>
       Мексіка <img class="flag" src="flags-iso/MX.png"><br>
       Куба <img class="flag" src="flags-iso/CU.png"><br>
       Канада <img class="flag" src="flags-iso/CA.png"> : <small>BC,ON,QC</small><br>
