--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <br>
   <div class="names">Marie vs. Ulad</div>
   <br>
-  <div class="numbers">31 vs. 33</div>
+  <div class="numbers">34 vs. 33</div>
   <br>
   <div class="countries">
     <br>
@@ -49,12 +49,15 @@
     Бельгія <img class="flag" src="flags-iso/BE.png"><br>
     Грэцыя <img class="flag" src="flags-iso/GR.png"><br>
     ЗША <img class="flag" src="flags-iso/US.png"> : <small>MA,NY</small><br>
+    Велікабрытанія <img class="flag" src="flags-iso/GB.png"><br>
     <br>
     <div class="countries marie-countries">
       Нарвегія <img class="flag" src="flags-iso/NO.png"><br>
       Гішпанія <img class="flag" src="flags-iso/ES.png"><br>
       Вугоршчына <img class="flag" src="flags-iso/HU.png"><br>
-      ЗША <img class="flag" src="flags-iso/US.png"> : <small>DC,PA</small><br>
+      ЗША <img class="flag" src="flags-iso/US.png"> : <small>DC,PA,ME,NH</small><br>
+      Манака <img class="flag" src="flags-iso/MC.png"><br>
+      Нідэрланды <img class="flag" src="flags-iso/NL.png"><br>
       <br>
       <br>
       <br>
@@ -62,7 +65,6 @@
       <br>
     </div>
     <div class="countries ulad-countries">
-      Велікабрытанія <img class="flag" src="flags-iso/GB.png"><br>
       ЗША <img class="flag" src="flags-iso/US.png"> : <small>CA,WA,NV,OR,HI</small><br>
       Мексіка <img class="flag" src="flags-iso/MX.png"><br>
       Куба <img class="flag" src="flags-iso/CU.png"><br>
