ulad update january 2024

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <br>
   <div class="names">Marie vs. Ulad</div>
   <br>
-  <div class="numbers">34 vs. 33</div>
+  <div class="numbers">34 vs. 35</div>
   <br>
   <div class="countries">
     <br>
@@ -60,9 +60,6 @@
       Нідэрланды <img class="flag" src="flags-iso/NL.png"><br>
       <br>
       <br>
-      <br>
-      <br>
-      <br>
     </div>
     <div class="countries ulad-countries">
       ЗША <img class="flag" src="flags-iso/US.png"> : <small>CA,WA,NV,OR,HI</small><br>
@@ -70,6 +67,8 @@
       Куба <img class="flag" src="flags-iso/CU.png"><br>
       Канада <img class="flag" src="flags-iso/CA.png"> : <small>BC,ON,QC</small><br>
       Паўночны Кіпр <img class="flag" src="flags-iso/_northern-cyprus.png"><br>
+      Аўстрыя <img class="flag" src="flags-iso/AT.png"><br>
+      Славенія <img class="flag" src="flags-iso/SI.png"><br>
       <br>
     </div>
   </div>
