[ulad] upd june 2024

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <br>
   <div class="names">Marie vs. Ulad</div>
   <br>
-  <div class="numbers">34 vs. 35</div>
+  <div class="numbers">34 vs. 38</div>
   <br>
   <div class="countries">
     <br>
@@ -50,14 +50,18 @@
     Грэцыя <img class="flag" src="flags-iso/GR.png"><br>
     ЗША <img class="flag" src="flags-iso/US.png"> : <small>MA,NY</small><br>
     Велікабрытанія <img class="flag" src="flags-iso/GB.png"><br>
+    Вугоршчына <img class="flag" src="flags-iso/HU.png"><br>
+    Нідэрланды <img class="flag" src="flags-iso/NL.png"><br>
     <br>
     <div class="countries marie-countries">
       Нарвегія <img class="flag" src="flags-iso/NO.png"><br>
       Гішпанія <img class="flag" src="flags-iso/ES.png"><br>
-      Вугоршчына <img class="flag" src="flags-iso/HU.png"><br>
       ЗША <img class="flag" src="flags-iso/US.png"> : <small>DC,PA,ME,NH</small><br>
       Манака <img class="flag" src="flags-iso/MC.png"><br>
-      Нідэрланды <img class="flag" src="flags-iso/NL.png"><br>
+      <br>
+      <br>
+      <br>
+      <br>
       <br>
       <br>
     </div>
@@ -69,6 +73,7 @@
       Паўночны Кіпр <img class="flag" src="flags-iso/_northern-cyprus.png"><br>
       Аўстрыя <img class="flag" src="flags-iso/AT.png"><br>
       Славенія <img class="flag" src="flags-iso/SI.png"><br>
+      Люксембург <img class="flag" src="flags-iso/LU.png"><br>
       <br>
     </div>
   </div>
