[marie] upd june 2024

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <br>
   <div class="names">Marie vs. Ulad</div>
   <br>
-  <div class="numbers">34 vs. 38</div>
+  <div class="numbers">35 vs. 38</div>
   <br>
   <div class="countries">
     <br>
@@ -58,7 +58,7 @@
       Гішпанія <img class="flag" src="flags-iso/ES.png"><br>
       ЗША <img class="flag" src="flags-iso/US.png"> : <small>DC,PA,ME,NH</small><br>
       Манака <img class="flag" src="flags-iso/MC.png"><br>
-      <br>
+      Андора <img class="flag" src="flags-iso/AD.png"><br>
       <br>
       <br>
       <br>
